# codemelted_developer

./: .gitignore  CHANGELOG.md  GETTING_STARTED.md  README.md  build.ps1  design-notes.drawio.html  getting_started.md  index.html  pubspec.yaml
.github/: FUNDING.yml
assets/cpp/: README.md  codemelted.cpp  codemelted.js  codemelted.wasm  doxygen.cfg
assets/pi/: README.md
assets/pwsh/: README.md  codemelted.ps1  workerThread.txt
assets/templates/: mermaid.html
codemelted_c/: README.md  doxygen.cfg
codemelted_com/: deploy.sh  tester.html
codemelted_com/services/: about-me.html  github-gists.html  media-player.html  presentations.html  uml-modeler.html
codemelted_com/widgets/: about-me.html  dev-header.html  github-gists.html  header-footer.html  newsletter.html  presentations.html
codemelted_cpp/: LICENSE  README.md  codemelted.cpp  codemelted.h  codemelted_test.cpp  doxygen.cfg
codemelted_dev/: book.toml
codemelted_dev/src/: 1-0_functional-decomposition.md  10-0_network-use-case.md  11-0_npu-use-case.md  12-0_process-use-case.md  13-0_runtime-use-case.md  14-0_storage-use-case.md  15-0_ui-use-case.md  16-0_mathematical-formulas.md  2-0_async-use-case.md  3-0_console-use-case.md  4-0_db-use-case.md  5-0_disk-use-case.md  6-0_hw-use-case.md  7-0_json-use-case.md  8-0_logger-use-case.md  9-0_monitor-use-case.md  README.md  SUMMARY.md  chapter_1.md
codemelted_flutter/: .flutter-plugins-dependencies  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
codemelted_flutter/android/: build.gradle  settings.gradle
codemelted_flutter/example/: README.md  pubspec.yaml
codemelted_flutter/ios/: codemelted_flutter.podspec
codemelted_flutter/lib/: codemelted.dart  codemelted_async.dart  codemelted_audio.dart  codemelted_console.dart  codemelted_database.dart  codemelted_disk.dart  codemelted_firebase.dart  codemelted_flutter.dart  codemelted_flutter_method_channel.dart  codemelted_flutter_old.dart  codemelted_flutter_platform_interface.dart  codemelted_flutter_web.dart  codemelted_game.dart  codemelted_hardware.dart  codemelted_logger.dart  codemelted_math.dart  codemelted_network.dart  codemelted_runtime.dart  codemelted_storage.dart  codemelted_ui.dart
codemelted_flutter/linux/: CMakeLists.txt  codemelted_flutter_plugin.cc  codemelted_flutter_plugin_private.h
codemelted_flutter/macos/: codemelted_flutter.podspec
codemelted_flutter/test/: codemelted_flutter_method_channel_test.dart  codemelted_flutter_test.dart  codemelted_logger_test.dart  codemelted_test.dart
codemelted_flutter/windows/: CMakeLists.txt  codemelted_flutter_plugin.cpp  (+2 more)
codemelted_iot/: README.md  codemelted.h
codemelted_js/: README.md  codemelted.js  codemelted.ts  codemelted_prototype.js  codemelted_test.html  codemelted_test.js  codemelted_test.ts  deno.json  jsdoc-default.css  tsconfig.json
codemelted_pi/: README.md  book.toml
codemelted_pwsh/: LICENSE  README.md  book.toml  codemelted.cmd  codemelted.ps1
codemelted_rust/: Cargo.toml  README.md  codemelted.rs
codemelted_rust/models/: codemelted_async.mmd  codemelted_console.mmd  codemelted_db.mmd  codemelted_disk.mmd  codemelted_hw.mmd  codemelted_json.mmd  codemelted_logger.mmd  codemelted_monitor.mmd  codemelted_network.mmd  codemelted_npu.mmd  codemelted_process.mmd  codemelted_runtime.mmd  codemelted_storage.mmd
codemelted_terminal/: README.md  codemelted.py  codemelted_demo.cmd
codemelted_web/: .flutter-plugins  .flutter-plugins-dependencies  .metadata  README.md  pubspec.yaml
lib/: codemelted.dart
npu/: README.md  codemelted.cpp  codemelted.wasm
pwa/: README.md  codemelted.js  codemelted_test.html  codemelted_test.ts
raspberry_pi/: README.md
term/: codemelted.ps1  codemelted.sh
terminal/: README.md  codemelted.ps1  setup.cmd  setup.sh
test/: codemelted_test.dart
use_cases/: async.md  async_io.md  audio.md  console.md  data.md  database.md  disk.md  firebase.md  game.md  getting_started.md  hardware.md  json.md  logger.md  math.md  memory.md  network.md  runtime.md  storage.md  ui.md  user_interface.md
wasm/: README.md  codemelted.cpp  doxygen.cfg
(+169 files in other folders)
