[package]
name = "codemelted"
version = "25.1.1"
description = "The CodeMelted Rust Crate is an implementation of the CodeMelted DEV twelve identified domain use cases. These domains are areas of study a software engineer should be familiar with regardless of programming language, SDK, or chosen framework. This crate brings these twelve domains to the Rust programming language to aid software engineers in building native applications quickly and securely."
authors = ["Mark Shaffer <mark.shaffer@codemelted.com>"]
keywords = ["console", "json", "logger", "process", "ui"]
categories = ["Concurrency", "Database implementations", "Filesystem", "Mathematics", "Network programming"]
readme = "README.md"
edition = "2024"
homepage = "https://codemelted.com/developer"
repository = "https://github.com/codemelted/codemelted_developer"
license = "MIT"
publish = false

[lib]
path = 'codemelted.rs'

# Used for test purposes when developing items
# [[bin]]
# name = 'codemelted_tester'
# path = 'codemelted.rs'

[dependencies]
btleplug = { version = "0.11", features = ["serde"] }
chrono = "0.4.40"
json = "0.12.4"
online = "4.0.2"
reqwest = { version = "0.12", features = ["json"] }
rouille = "3.6.2"
rpassword = "7.3.1"
rusqlite = { version = "0.35.0", features = ["bundled"] }
serialport = "4.7.1"
simple-mermaid = "0.2.0"
sysinfo = "0.34.2"
tokio = { version = "1.45.0", features = ["full"] }
url = "2.5.4"
